manifest/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  selector:
    app: web
  ports:
    - port: 80  
      protocol: TCP
      targetPort: 80
