manifest/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: example-ingress



spec:


  tls:
  - hosts:
    - garystimber.site
    secretName: tls-secret

  ingressClassName: nginx

  rules:

    - host: garystimber.site

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: nginx-service

                port:

                  number: 80
